# ArcAstraOneAru

./: .gitignore  README.md  requirements.txt
backend/: config.toml  pyproject.toml  requirements.txt  start_backend.ps1
backend/api/: index.py
backend/app/: admin.py  auth.py  dashauth.py  db.py  main.py  schemas.py  schemas_ask.py  security.py
backend/app/core/: config.py  logging.py
backend/app/routers/: ask.py  auth_dashboard.py  dashboard.py  devices.py  sync.py
backend/migrations/: 0001_target_schema.sql  0002_dashboard_users.sql  run_migration.py
backend/tests/: conftest.py  test_devices.py  test_sync.py
connector/: arq-connector.spec  build.ps1  config.example.toml  make_icon.ps1  pyproject.toml
connector/src/arq_connector/: __main__.py  cli.py  config.py  gui.py  lock.py  logging_setup.py  runner.py  scheduler.py  settings.py
connector/src/arq_connector/security/: credentials.py
connector/src/arq_connector/sync/: pusher.py  snapshot.py  state.py
connector/src/arq_connector/tally/: client.py  detect.py  envelopes.py  launcher.py  parsers.py
connector/tests/: test_credentials.py  test_detect.py  test_launcher.py  test_parsers.py  test_pusher.py  test_snapshot.py
connector/tests/fixtures/: README.md  bills_receivable.xml  debtor_ledgers.xml  list_of_companies.xml
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
magic_mds/: CONNECTOR_SETUP.md  DASHBOARD_TABLE_REFERENCE.md  DATA_MODEL.md  ERROR101_RESOLUTION.md  HOW_IT_ALL_WORKS.md  TALLY_TEST_DATA.md  USER_MANUAL.md  VERCEL_DEPLOY.md  (+2 more)
(+16 files in other folders)
